    2. Defining a form parameter with the same name or ID as a JavaScript Form function will cause that function not to
       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
 8-Aug-2004
   Thanks to Guillaume Dandurand <Guillaume.Dandurand@cn.ca> for supplying code to get the onload event when the page
         is a frameset rather than a regular page.

   Problems fixed:
       1. A frameset 'onload' event is now invoked after all of its subframes have been loaded
       2. ServletUnit's HttpServletRequest.getCookies() method was only returning the first cookie defined in the request

   Additions:
       1. Added preliminary support for lists

28-Jul-2004
   Additions:
       1. rfe #986876: The WebClient.addCookie method has been deprecated, since its behavior is actually a bit confusing
          and replaced with "putCookie" allowing subsequent the replacement of a cookie value defined by a previous
          call to "putCookie."

22-Jul-2004
   Acknowledgements:
       Thanks to Kazuaki Matsuhashi <matsuhashi@quick.co.jp> for correcting the handling of non-Latin link parameters

   Problems fixed:
       1. patch #995853: decode link parameters based on page character set

21-Jul-2004
   Acknowledgements:
       Thanks to Darrell DeBoer <bigdaz@users.sourceforge.net> for providing a patch for select box functionality

   Additions:
       1. patch #879193: Select now behaves as a multiselect listbox if it has size > 1 or if multiple is set and the size is not set to 1.
       2. patch #879193: The name of a select box may now be treated as an array of options.

20-Jul-2004
   Problems fixed:
       1. bug #990914: WebFrame scriptables are now accessible by getElementById

 9-Jul-2004
   Additions: